Deprioritize content that has been viewed previously